sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/Ocorrencia_Integracao__c.object-meta.xml
<CustomObject>
    <description>Tudo o que merece ser explicado num lote de integração: alterações de estado registadas, linhas rejeitadas, conflitos com o que já está gravado e avisos. É a lista por onde se resolve o que a integração não conseguiu decidir sozinha.</description>
    <label>Ocorrência de integração</label>
    <nameField>
        <displayFormat>OCO-{000000}</displayFormat>
        <label>Ocorrência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ocorrências de integração</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>