sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Chave_Origem__c.field-meta.xml
<CustomField>
    <fullName>Chave_Origem__c</fullName>
    <description>Referência da tarefa na NOS a que a ocorrência diz respeito.</description>
    <inlineHelpText>É a mesma referência que aparece na ordem de trabalho.</inlineHelpText>
    <label>Referência na origem</label>
    <length>50</length>
    <type>Text</type>
</CustomField>