sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Conteudo__c.field-meta.xml
<CustomField>
    <fullName>Conteudo__c</fullName>
    <description>Dados em bruto da linha que originou a ocorrência.</description>
    <inlineHelpText>Serve para o apoio perceber o que a NOS enviou.</inlineHelpText>
    <label>Conteúdo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>