sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <description>Lote de integração que gerou a ocorrência.</description>
    <label>Lote</label>
    <referenceTo>Lote_Integracao__c</referenceTo>
    <relationshipLabel>Ocorrências</relationshipLabel>
    <relationshipName>Ocorrencias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>