sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <description>Explicação curta da ocorrência, escrita para ser lida sem abrir o conteúdo.</description>
    <inlineHelpText>Exemplo: tipo de pedido OTX-ZZ9 não existe no catálogo.</inlineHelpText>
    <label>Mensagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>