sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Objecto__c.field-meta.xml
<CustomField>
    <fullName>Objecto__c</fullName>
    <description>Nome do objecto do Salesforce afectado pela ocorrência.</description>
    <inlineHelpText>Exemplo: WorkOrder.</inlineHelpText>
    <label>Objecto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>