sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ordem de trabalho a que a ocorrência diz respeito.</description>
    <inlineHelpText>Vazio quando a linha foi rejeitada antes de haver ordem.</inlineHelpText>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Ocorrências de integração</relationshipLabel>
    <relationshipName>Ocorrencias_Integracao</relationshipName>
    <type>Lookup</type>
</CustomField>