sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Registo__c.field-meta.xml
<CustomField>
    <fullName>Registo__c</fullName>
    <description>Identificador ou nome do registo a que a ocorrência diz respeito, quando não é uma ordem de trabalho.</description>
    <inlineHelpText>Fica vazio quando a ocorrência já aponta a uma ordem.</inlineHelpText>
    <label>Registo afectado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>