sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Reprocessavel__c.field-meta.xml
<CustomField>
    <fullName>Reprocessavel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a ocorrência pode ser resolvida a repetir o processamento, sem pedir nada à NOS.</description>
    <inlineHelpText>Ligado quando a causa é dado de referência em falta, como um tipo de pedido ou uma célula que ainda não existe.</inlineHelpText>
    <label>Reprocessável</label>
    <type>Checkbox</type>
</CustomField>