sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Natureza da ocorrência.</description>
    <inlineHelpText>Alteração é uma mudança de estado registada, Rejeição é uma linha que não entrou, Conflito é uma diferença entre o que temos e o que a NOS diz, Aviso é algo que entrou mas merece ser visto.</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alteração</fullName>
            </value>
            <value>
                <fullName>Rejeição</fullName>
            </value>
            <value>
                <fullName>Conflito</fullName>
            </value>
            <value>
                <fullName>Aviso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>