sinalcabo/force-app/main/default/objects/Ocorrencia_Integracao__c/listViews/Reprocessaveis.listView-meta.xml
<ListView>
    <fullName>Reprocessaveis</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Chave_Origem__c</columns>
    <columns>Mensagem__c</columns>
    <columns>Ordem__c</columns>
    <columns>Lote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reprocessavel__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Reprocessáveis</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>